--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "framer-motion": "^10.16.16",
     "next": "^14.0.4",
+    "next-seo": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4",
     "react-hook-form": "^7.49.2",
-    "framer-motion": "^10.16.16",
-    "next-seo": "^6.5.0"
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4"
+    "typescript": "^5.3.3"
   }
 }
-
