--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.0.4"
   },
   "devDependencies": {
